# substrate

./: .gitignore  README.adoc  shell.nix
core/test-runtime/wasm/: build.sh
node-template/runtime/: Cargo.toml
node-template/runtime/src/: lib.rs  template.rs
srml/erc20-multi/: Cargo.toml
srml/erc20-multi/src/: lib.rs
