[package]
name = 'srml-erc20-multi'
version = '0.9.0'
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'

[dependencies]
# Vec
rstd = { package = "sr-std", path = "../../core/sr-std", default-features = false }
parity-codec = { version = "3.2", default-features = false }
# Needed for various traits. In our case, `OnFinalize`.
runtime-primitives = { package = "sr-primitives", path = "../../core/sr-primitives", default-features = false }
# Needed for type-safe access to storage DB.
support = { package = 'srml-support', path = "../support", default-features = false }
# `system` module provides us with all sorts of useful stuff and macros depend on it being around.
system = { package = "srml-system", path = "../system", default-features = false }

[dev-dependencies]
substrate-primitives = { path = "../../core/primitives" }
sr-std = { path = "../../core/sr-std" }
runtime_io = { package = "sr-io", path = "../../core/sr-io" }

[features]
default = ['std']
std = [
	"rstd/std",
    'parity-codec/std',
	'runtime-primitives/std',
    'support/std',
    'system/std',
]
